--- a/website/templates/nlp_model.html
+++ b/website/templates/nlp_model.html
@@ -65,3 +65,5 @@
     </div>
 </main>
 {% endblock %}
+
+{% block admin_mode %}<p style="color: red;"><b>Currently in Admin Mode</b></p>{% endblock %}
