--- a/website/static/global_css.css
+++ b/website/static/global_css.css
@@ -39,6 +39,7 @@ footer p {
     padding: 10px;
 }
 
+/* header nav styling */
 .header-container {
     margin-left: -10px;
     margin-right: -10px;
@@ -292,4 +293,61 @@ footer p {
     border-radius: 50%;
     margin-right: 50px;
     position: static;
+}
+.result-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    font-size: 20px;
+    gap: 20px;
+    margin-left: 5px;
+}
+.result-container p {
+    margin: 0px;
+}
+.result-container ul {
+    margin: 5px;
+}
+.result-container h3 {
+    margin-left: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.nlp-result-container, .num-result-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.grid-container-num, .grid-container-nlp {
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    width: 100%;
+    max-width: 200px;
+}
+.box {
+    aspect-ratio: 1 / 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+}
+.img-text-display-test {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 10px;
+}
+/* TODO: Change to grid */
+.img-wrapper-test {
+    margin-top: 10px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.img-wrapper-test img {
+    width: 100%;
+    object-fit: fill;
+    height: auto;
+    max-height: 75%;
 }
