Added pics for model testing, decorating nav bar (still in progress)

--- a/website/templates/admin_page.html
+++ b/website/templates/admin_page.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
-{% block head_title%}Admin Page{% endblock %}
+{% block admin_page_name %}
+<span class="selected">Admin Page</span>
+{% endblock %}
 
-{% block admin_link %}<a href="{{ url_for('home') }}" class="admin-link"> Return to Main Page</a>{% endblock %}
+{% block at_admin_page %}{% endblock %}
 
 {% block content %}
 <main>
@@ -27,5 +29,3 @@
     </div>
 </main>
 {% endblock %}
-
-{% block admin_mode %}<p style="color: red;"><b>Currently in Admin Mode</b></p>{% endblock %}
