--- a/website/static/global_css.css
+++ b/website/static/global_css.css
@@ -3,7 +3,9 @@
     --primary-nav-color: lightgrey;
     --primary-link-hover-color: #f1f1f1;
     --primary-button-hover-color: grey;
-    --header-nav-font-size: 20px;
+    --header-nav-font-size: 18px;
+    --nav-color: #81bdef;
+    --nav-color-list-hover: #0d47a1;
 }
 
 html {
@@ -43,78 +45,212 @@ footer p {
 .header-container {
     margin-left: -10px;
     margin-right: -10px;
+    margin-top: 50px;
 }
-.header-container h1 {
-    margin: 10px;
-    padding: 5px;
-}
-.header-container nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    background-color: lightgrey;
-    padding: 10px;
-}
-.header-container nav .admin-link {
-    margin-right: 10px;
-    margin-left: auto;
-    padding: 10px;
-    display: inline-block;
-    color: black;
-    border: none;
-    text-decoration: none;
-    background-color: var(--primary-nav-color);
-    font-size: var(--header-nav-font-size);
-}
-/*Dropdown menu*/
-.dropdown {
-    position: relative;
-}
-.dropbtn {
-    background-color: var(--primary-nav-color);
-    color: black;
-    padding: 10px;
-    font-size: var(--header-nav-font-size);
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
+.header-container > h1 {
     margin-left: 10px;
 }
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 200px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+.top-nav-bar {
+    border-bottom: 1px solid lightgrey;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 250px;
+    background-color: var(--nav-color);
 }
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+.top-nav-bar > h1 {
+    margin-left: auto;
+}
+.logo {
     text-decoration: none;
-    display: block;
-    margin: 0px;
+    color: black;
+}
+.nav-links {
+    display: flex;
+    margin-right: 20px;
+    gap: 75px;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    flex: 0;
+}
+.nav-links a {
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: var(--header-nav-font-size);
+    white-space: nowrap;
+}
+/* Logout alert message styling */
+.logout-msg {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 1000;
+
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    padding: 20px; 
+    transition: opacity 0.6s ease, transform 1.0s ease;
+    font-size: 18px;
+    background-color: rgb(255, 152, 152);
+    margin-left: -10px;
+    margin-right: -10px;
+}
+/* admin mode display styling */
+.admin-mode-display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: rgb(148, 253, 119);
+    font-size: 18px;
+    border-top: 0.5px solid lightgrey;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+/* Dropdown styling (don't touch this) */
+.dropdown {
+    min-width: 10em;
+    position: relative;
+}
+.dropdown * {
+    box-sizing: border-box;
+}
+.select {
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+.select-clicked {
+    border: 1px solid black;
+    border-radius: 0.5em;
+    box-shadow: 0, 0, 0.8em rgba(0, 0, 0, 0.1);
+}
+.select:hover {
+    color: var(--nav-color-list-hover);
+    background-color: whitesmoke;
+    border-radius: 0.5em;
+}
+.select:hover span {
+    font-size: calc(var(--header-nav-font-size) + 2px);
+    color: var(--nav-color-list-hover);
+}
+.selected {
+    font-size: var(--header-nav-font-size);
+    color: whitesmoke;
+}
+.caret {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 6px solid #aaa;
+    transition: 0.4s;
+}
+.caret-rotate {
+    transform: rotate(180deg);
+}
+.menu {
+    list-style: none;
+    padding: 0.2em 0.5em;
+    background: white;
+    border: 1px #363a43 solid;
+    border-radius: 0.5em;
+    color: black;
+    position: absolute;
+    top: 2em;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
+    opacity: 0;
+    display: none;
+    transition: 0.2s;
+    z-index: 1;
     font-size: 20px;
 }
-.dropdown-content a:hover {
-    background-color: var(--primary-link-hover-color);
-}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-.dropdown:hover .dropbtn {
-    background-color: var(--primary-link-hover-color);
-    border-radius: 2px;
-}
-.header-container nav a:hover {
+.menu li {
+    padding: 0.7em 0.5em;
+    margin: 0.3em;
+    border-radius: 0.5em;
     cursor: pointer;
+    white-space: wrap;
+    color: black;
+}
+.menu li:hover {
+    background: whitesmoke;
+    font-size: calc(var(--header-nav-font-size) + 1px);
     color: blue;
-    background-color: var(--primary-link-hover-color);
-    border-radius: 5px;
+}
+.active {
+    color: blue;
+}
+.menu-open {
+    display: block;
+    opacity: 1;
 }
 /* End of nav styling */
+
+.admin-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+}
+.admin-link:hover {
+    cursor: pointer;
+    color: var(--nav-color-list-hover);
+    background: whitesmoke;
+    transition: background 0.3s;
+    border-radius: 0.5em;
+    font-size: calc(var(--header-nav-font-size) + 2px);
+}
+
+/* bottom-right styling */
+.floating-btn {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+
+    background-color: whitesmoke;
+    color: black;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
+    /* Transition purpose, below is the initial state */
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    z-index: 9999;
+}
+.floating-btn.show {
+    /* After scroll > 50 state */
+    opacity: 1;
+    transform: translateY(0);
+}
+.floating-btn:hover {
+    transform: scale(1.1);
+}
 
 /*Styling for this mainpage.html (gonna vibe hard)*/
 /* This also uses lots of pre-defined global css style that can be reused in other files */
