--- a/website/templates/admin_login.html
+++ b/website/templates/admin_login.html
@@ -2,7 +2,7 @@
 
 {% block head_title%}Admin Login{% endblock %}
 
-{% block admin_link %}<a href="{{ url_for('home') }}" class="admin-link"> Return to Main Page</a>{% endblock %}
+{% block admin_link %}{% endblock %}
 
 {% block after_header %}
 <br>
