--- a/website/templates/nlp_model.html
+++ b/website/templates/nlp_model.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
-{% block head_title%}NLP model{% endblock %}
+{% block admin_page_name%}
+<span class="selected">NLP Model</span>
+{% endblock %}
 
-{% block admin_link %}<a href="{{ url_for('home') }}" class="admin-link"> Return to Main Page</a>{% endblock %}
+{% block at_nlp_model %}{% endblock %}
 
 {% block after_header %}
 <br>
@@ -66,4 +68,3 @@
 </main>
 {% endblock %}
 
-{% block admin_mode %}<p style="color: red;"><b>Currently in Admin Mode</b></p>{% endblock %}
