--- a/website/templates/numerical_model.html
+++ b/website/templates/numerical_model.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
-{% block head_title%}Numerical Model{% endblock %}
+{% block admin_page_name%}
+<span class="selected">Numerical Model</span>
+{% endblock %}
 
-{% block admin_link %}<a href="{{ url_for('home') }}" class="admin-link"> Return to Main Page</a>{% endblock %}
+{% block at_numerical_model %}{% endblock %}
 
 {% block after_header %}
 <br>
@@ -65,5 +67,3 @@
     </div>
 </main>
 {% endblock %}
-
-{% block admin_mode %}<p style="color: red;"><b>Currently in Admin Mode</b></p>{% endblock %}
